syntax = "proto3";

package discount;
option go_package = "/protocol";

message DiscountRequest {
  string userId = 1;
  string productId = 2;
}

message DiscountResponse {
  float percentage = 1;
  int64 valueInCents = 2;
}

service DiscountService{
  // Error handling
  // This RPC will return errors if the product is not found in the database or if product id or user id are invalid
  rpc Discount(DiscountRequest) returns (DiscountResponse){};
}